apps-external/openproject/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openproject
  namespace: apps-external
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: main-gateway
      namespace: system-ingress
      sectionName: websecure-raf
  hostnames:
    - openproject.raf-project.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openproject
          port: 8080
